--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,24 +1,26 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
-# import:
-  # - /home/madsen/.config/alacritty/fonts.yml
-# - /home/madsen/.config/alacritty/colors.yml
+import:
+  - /home/madsen/.config/alacritty/fonts.yml
+  - /home/madsen/external_pkgs/alacritty-theme/themes/tokyo-night-storm.yaml
 shell:
   program: /usr/bin/fish
   args:
     - --login
 
 window:
+  dynamic_padding: true
   dimensions:
-    columns: 84
-    lines: 22
+    columns: 200 #84
+    lines: 100 #22
   padding:
     x: 8 
     y: 8
 
   decorations: full
   startup_mode: Windowed
+  title: Alacritty
   dynamic_title: true
 
 scrolling:
@@ -32,37 +34,27 @@ cursor:
   style:
     shape: Block
     blinking: On
-  unfocused_hollow: false
+  unfocused_hollow: false # true 
 
 font:
-  size: 7 
+  size: 14 
+  builtin_box_drawing: true
+  draw_bold_text_with_bright_colors: true
+
+colors:
+  cursor:
+    text: CellBackground
+    cursor: CellForeground
+  hints:
+    start:
+      foreground: CellForeground
+      background: CellBackground
+    end:
+      foreground: CellForeground
+      background: CellBackground
+
 ## Reload config changes automatically 
 live_config_reload: true
-colors:
-  # Default colors
-  primary:
-    background: '#2E3440'
-    foreground: '#D8DEE9'
 
-  # Normal colors
-  normal:
-    black: '#3B4252'
-    red: '#BF616A'
-    green: '#A3BE8C'
-    yellow: '#EBCB8B'
-    blue: '#81A1C1'
-    magenta: '#B48EAD'
-    cyan: '#88C0D0'
-    white: '#E5E9F0'
-
-  # Bright colors
-  bright:
-    black: '#4C566A'
-    red: '#BF616A'
-    green: '#A3BE8C'
-    yellow: '#EBCB8B'
-    blue: '#81A1C1'
-    magenta: '#B48EAD'
-    cyan: '#8FBCBB'
-    white: '#ECEFF4'
-theme: Nord
+debug:
+  highlight_damage: false
