--- a/alacritty/fonts.yml
+++ b/alacritty/fonts.yml
@@ -2,33 +2,33 @@
 font:
   # Normal (roman) font face
   normal:
-    family: "Fira Code"
-    style: Medium
+    family: Fira Code
+    style: Regular 
 
   # Bold font face
   bold:
-    family: "Fira Code"
+    family: Fira Code
     style: Bold
 
   # Italic font face
   italic:
-    family: "Fira Code"
+    family: Fira Code
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    family: "Fira Code"
+    family: Fira Code 
     style: Bold Italic
 
   # Point size
   size: 13.4
 
   # Offset
-  #offset:
-  #  x: 0
-  #  y: 0
+  offset:
+    x: 2 
+    y: 2
 
   # Glyph offset
   #glyph_offset:
-  #  x: 0
-  #  y: 0
+  # x: 1
+  # y: 1
