--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -3,20 +3,20 @@
 # Import additional configuration files
 import:
   - /home/madsen/.config/alacritty/fonts.yml
-  - /home/madsen/external_pkgs/alacritty-theme/themes/tokyo-night-storm.yaml
+  - /home/madsen/external_pkgs/alacritty-theme/themes/gruvbox_material.yaml
 shell:
   program: /usr/bin/fish
   args:
     - --login
 
 window:
-  dynamic_padding: true
+  dynamic_padding: false
   dimensions:
     columns: 200 #84
     lines: 100 #22
   padding:
-    x: 8 
-    y: 8
+    x: 2
+    y: 0
 
   decorations: full
   startup_mode: Windowed
@@ -34,10 +34,10 @@ cursor:
   style:
     shape: Block
     blinking: On
-  unfocused_hollow: false # true 
+  unfocused_hollow: false # true
 
 font:
-  size: 14 
+  size: 13
   builtin_box_drawing: true
   draw_bold_text_with_bright_colors: true
 
@@ -53,7 +53,7 @@ colors:
       foreground: CellForeground
       background: CellBackground
 
-## Reload config changes automatically 
+## Reload config changes automatically
 live_config_reload: true
 
 debug:
