--- a/alacritty/fonts.yml
+++ b/alacritty/fonts.yml
@@ -2,22 +2,24 @@
 font:
   # Normal (roman) font face
   normal:
-    family: Fira Code
+    family: Liga SFMono Nerd Font 
     style: Regular 
 
   # Bold font face
   bold:
-    family: Fira Code
+    family: Liga SFMono Nerd Font 
     style: Bold
 
   # Italic font face
   italic:
-    family: Fira Code
+    family: Liga SFMono Nerd Font 
+    style: Bold
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    family: Fira Code 
+    family: Liga SFMono Nerd Font 
+    style: Bold
     style: Bold Italic
 
   # Point size
@@ -25,10 +27,10 @@ font:
 
   # Offset
   offset:
-    x: 2 
-    y: 2
+    x: 0 
+    y: 0
 
   # Glyph offset
   #glyph_offset:
-  # x: 1
-  # y: 1
+  # x: 0
+  # y: 0
