--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,33 +111,6 @@ bind-key -T copy-mode-vi M-k resize-pane -U 1
 bind-key -T copy-mode-vi M-l resize-pane -R 1
 ########################################################################################################
 
-
-
-
-
-
-
-
-# # navigating panes
-# bind -n C-h select-pane -L
-# bind -n C-j select-pane -D
-# bind -n C-k select-pane -U
-# bind -n C-l select-pane -R
-
-# # Fine adjustment (1 or 2 cursor cells per bump)
-# bind -n S-Left resize-pane -L 2
-# bind -n S-Right resize-pane -R 2
-# bind -n S-Down resize-pane -D 1
-# bind -n S-Up resize-pane -U 1
-#
-# # Coarse adjustment (5 or 10 cursor cells per bump)
-# bind -n C-Left resize-pane -L 10
-# bind -n C-Right resize-pane -R 10
-# bind -n C-Down resize-pane -D 5
-# bind -n C-Up resize-pane -U 5
-
-
-
 # kill current pane/window
 bind-key q confirm-before kill-pane
 bind-key Q confirm-before kill-window
@@ -150,6 +123,7 @@ bind c new-window -c "#{pane_current_path}"
 
 set -g base-index 1
 set -g renumber-windows on
+set -g status off
 setw -g mode-keys vi
 
 set-option -g status-left-length 100
