--- a/nvim/package.json
+++ b/nvim/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "neovim": "^4.10.1"
+    "neovim": "^4.10.1",
+    "tree-sitter": "^0.20.6",
+    "tree-sitter-cli": "^0.20.8"
   }
 }
